Fix custom abilities breaking char sheet, and fix ability roll label to be non-translated so it uses the right data.

--- a/templates/actor/character/sheet-header.hbs
+++ b/templates/actor/character/sheet-header.hbs
@@ -130,7 +130,7 @@
         data-dtype="Number"
         size="3"
       />
-      <span class="ability-label rollable {{abilityLabelClass this}}">{{abbreviate this.label}}</span>
+      <span class="ability-label rollable {{abilityLabelClass this.name}}">{{abbreviate this.label}}</span>
     </div>
     {{/each}}
   </div>
