--- a/scss/morkborg/_sheet.scss
+++ b/scss/morkborg/_sheet.scss
@@ -133,6 +133,7 @@
         border-top: 1px solid var(--foreground-color);
         border-bottom: none;
         text-shadow: none;
+        color: var(--foreground-color);
       }
     }
   }
