--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1,7 +1,7 @@
 @import "morkborg/_root";
 @import "morkborg/_global";
 @import "morkborg/_fonts";
-@import "morkborg/_flex";
+/* @import "morkborg/_flex"; */
 @import "morkborg/_morkborg";
 @import "morkborg/_sheet";
 @import "morkborg/_actor-sheet";
