--- a/scss/morkborg/_rollcards.scss
+++ b/scss/morkborg/_rollcards.scss
@@ -29,6 +29,9 @@
       font-family: var(--item-font);
       font-size: 14px;
     }
+    img {
+      display: inline;
+    }
   }
 
   .roll-title {
