Tweak css to ignore foundry light/dark sidebar bg.

--- a/scss/morkborg/_foundry-overrides.scss
+++ b/scss/morkborg/_foundry-overrides.scss
@@ -218,6 +218,12 @@ form.editable .results {
   }
 }
 
+/*
+.themed.theme-light {
+  background: none;  
+}
+*/
+
 .chat-log {
   background: var(--sidebar-background);
 
